# rag-bone-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml  dist-workspace.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
scripts/: fetch-reranker.sh  install-skill.sh
skills/claude-code/rag-bone/: SKILL.md
skills/rag-bone/: SKILL.md
src/: accel.rs  chunk.rs  cli.rs  config.rs  embcache.rs  embed.rs  eval.rs  index.rs  lexical.rs  main.rs  metadata.rs  output.rs  progress.rs  rerank.rs  search.rs  store.rs  walk.rs
