[package]
name = "rag-bone-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Local semantic search CLI for documentation and multi-language codebases"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[[bin]]
name = "rag-bone"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
fastembed = { version = "5.17.3", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
# Same crate/backend fastembed uses to auto-download built-ins; reused here to
# auto-fetch user-defined reranker recipes into the shared HF cache.
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "native-tls"] }
ignore = "0.4.30"
notify = "8.2.0"
ort = { version = "=2.0.0-rc.12", default-features = false, optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
text-splitter = { version = "0.32.0", features = ["code", "markdown"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tree-sitter = "0.26.11"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
xxhash-rust = { version = "0.8.17", features = ["xxh3"] }

[features]
default = []
# Acceleration via ONNX Runtime. Provider registration is fail-fast;
# unsupported individual nodes may still fall back to the CPU.
# `copy-dylibs` places the provider libraries next to the artifact.
gpu = ["dep:ort", "ort/cuda", "ort/copy-dylibs"]
directml = ["dep:ort", "ort/directml", "ort/copy-dylibs"]
coreml = ["dep:ort", "ort/coreml", "ort/copy-dylibs"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
